namespace Qbc.Workboard.Domain;

public enum SprintStatus
{
    Planned,
    Active,
    Completed
}

